# eclair

./: .gitignore  LICENSE  README.md  TODO  eclair.cabal  eclaire.cabal
src/: Eclair.hs  Eclaire.hs
src/Eclair/: Frontend.hs  VersionVector.hs
src/Eclair/Backend/: InMemory.hs  Reference.hs
src/Eclair/Examples/: Int1.hs  Map1.hs
src/Eclair/Frontend/: Base.hs  Itf.hs
src/Eclair/Frontend/Itf/: Base.hs  Dict.hs  Integer.hs
src/Eclaire/: Frontend.hs
src/Eclaire/Frontend/: Base.hs  Itf.hs
src/Eclaire/Frontend/Itf/: Base.hs
