name:                eclair
version:             0.1.0.0
synopsis:            eventually-consistent shared memory with functional updates
description:         A framework for eventually-consistent shared memory that provides
                     updates described as pure functions.
license:             BSD3
license-file:        LICENSE
author:              Arie Middelkoop, Annette Bieniusa
maintainer:          Arie Middelkoop <amiddelk@gmail.com>
category:            Network
build-type:          Simple
cabal-version:       >= 1.8

library
  exposed-modules:     Eclair,
                       Eclair.Frontend, Eclair.Frontend.Base,
                       Eclair.Frontend.Itf, Eclair.Frontend.Itf.Base,
                       Eclair.Frontend.Itf.Integer, Eclair.Frontend.Itf.Dict,
                       Eclair.Backend.Reference,
                       Eclair.Examples.Int1
  build-depends:       base >= 4.3, stm >= 2.3, deepseq >= 1.3, mtl >= 2.1,
                       containers >= 0.4, ghc-prim >= 0.2
  hs-source-dirs:      src
