name:                eclaire
version:             1.0.0.0
synopsis:            eventually-consistent shared memory with functional updates
description:         A framework for eventually-consistent shared memory that provides
                     updates described as pure functions.
license:             BSD3
license-file:        LICENSE
author:              Arie Middelkoop, Annette Bieniusa
maintainer:          Arie Middelkoop <amiddelk@gmail.com>
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Eclaire, Eclaire.Frontend, Eclaire.Frontend.Itf, Eclaire.Frontend.Base, Eclaire.Frontend.Itf.Base
  build-depends:       base ==4.5.*, stm ==2.3.*, deepseq ==1.3.*, mtl ==2.1.*
  hs-source-dirs:      src
